<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <DUT Name="ST_VentilationDefaultParameters" Id="{6f714d06-faac-4e48-98e9-cd6327050d25}">
    <Declaration><![CDATA[TYPE ST_VentilationDefaultParameters :
STRUCT
	aSetPointLimitsTemperature : ARRAY[1..2] OF REAL := [16,45];
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>